adding postTask keep in loop users feature