@@ -8,13 +8,16 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class GlobalCorsConfg {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); // Allowed origin
+        configuration.setAllowedOriginPatterns(List.of("*"));  // Better than setAllowedOrigins
+      //  configuration.setAllowedOrigins(Arrays.asList("*")); // this is for deploying aws to allowed all
+        //configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); // Allowed origin fo local
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
